[Qt] Webkit in Qt does not have window.showModalDialog https://bugs.webkit.org/show_bug.cgi?id=25585

Reviewed by Kenneth Rohde Christiansen.

WebKit/qt:

Create a new eventloop when runModal() is called.
Added comemnt in QWebPage::createWindow that the application is responsible
for setting the modality of the appropriate window.

* Api/qwebpage.cpp:
* WebCoreSupport/ChromeClientQt.cpp:
* WebCoreSupport/ChromeClientQt.h:

WebKitTools:

Set the modality flag when createWindow is called with window type WebWindowDialog.

* QtLauncher/main.cpp:



Canonical link: https://commits.webkit.org/45863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54550 268f45cc-cd09-0410-ab3c-d52691b4dbfc